add verbosity to debug fix

--- a/tasks/export/main.yml
+++ b/tasks/export/main.yml
@@ -14,8 +14,7 @@
       with_items: "{{ kxlops_mysql_migrate_profile[kxlops_mysql_migrate_active_profile].scheme_only_groups }}"
 
     - name: "DEBUG OUTPUT: fact_profile_export_tables_scheme_only"
-      debug: msg={{ fact_profile_export_tables_scheme_only }}
-        verbosity: 1
+      debug: msg={{ fact_profile_export_tables_scheme_only }} verbosity=1
 
 - block:
     - name: "Collect tables SCHEME ONLY from REGEX: mysql {{ kxlops_mysql_migrate_export_db }} -s -N -h {{ kxlops_mysql_migrate_export_host }} -u {{ kxlops_mysql_migrate_export_user }} -p{{ kxlops_mysql_migrate_export_pass }} -e 'SHOW TABLES FROM `{{ kxlops_mysql_migrate_export_db }}` WHERE `Tables_in_{{ kxlops_mysql_migrate_export_db }}` REGEXP \"{{ kxlops_mysql_migrate_profile[kxlops_mysql_migrate_active_profile].scheme_only_regex }}\"'"
@@ -28,8 +27,7 @@
         fact_profile_export_tables_scheme_only: "{{ ( fact_profile_export_tables_scheme_only + register_regex_scheme_only_tables.stdout_lines ) | unique }}"
 
     - name: "Final scheme only tables - fact_profile_export_tables_scheme_only"
-      debug: msg={{ fact_profile_export_tables_scheme_only }}
-        verbosity: 1
+      debug: msg={{ fact_profile_export_tables_scheme_only }} verbosity=1
   when: ( kxlops_mysql_migrate_profile[kxlops_mysql_migrate_active_profile].scheme_only_regex | default(false) )
 
 # EXPORT SCHEME ONLY
@@ -57,8 +55,7 @@
         fact_tables_to_ignore: "{{ register_regex_ignore_tables.stdout_lines + fact_profile_export_tables_scheme_only }}"
 
     - name: "DEBUG OUTPUT: fact_tables_to_ignore"
-      debug: msg={{ fact_tables_to_ignore }}
-        verbosity: 1
+      debug: msg={{ fact_tables_to_ignore }} verbosity= 1
   when: ( kxlops_mysql_migrate_profile[kxlops_mysql_migrate_active_profile].excluded_regex | default(false) )
 
 - block:
@@ -68,8 +65,7 @@
       with_items: "{{ kxlops_mysql_migrate_profile[kxlops_mysql_migrate_active_profile].scheme_and_data_groups }}"
 
     - name: "DEBUG OUTPUT: fact_profile_export_tables_scheme_and_data"
-      debug: msg={{ fact_profile_export_tables_scheme_and_data }}
-        verbosity: 1
+      debug: msg={{ fact_profile_export_tables_scheme_and_data }} verbosity=1
 
 - block:
     - name: "Collect tables SCHEME AND DATA from REGEX: mysql {{ kxlops_mysql_migrate_export_db }} -s -N -h {{ kxlops_mysql_migrate_export_host }} -u {{ kxlops_mysql_migrate_export_user }} -p{{ kxlops_mysql_migrate_export_pass }} -e 'SHOW TABLES FROM `{{ kxlops_mysql_migrate_export_db }}` WHERE `Tables_in_{{ kxlops_mysql_migrate_export_db }}` REGEXP \"{{ kxlops_mysql_migrate_profile[kxlops_mysql_migrate_active_profile].scheme_and_data_regex }}\"'"
@@ -82,8 +78,7 @@
         fact_profile_export_tables_scheme_and_data: "{{ ( fact_profile_export_tables_scheme_and_data + register_regex_scheme_and_data_tables.stdout_lines ) | unique }}"
 
     - name: "Final scheme and data tables - fact_profile_export_tables_scheme_and_data"
-      debug: msg={{ fact_profile_export_tables_scheme_and_data }}
-        verbosity: 1
+      debug: msg={{ fact_profile_export_tables_scheme_and_data }} verbosity=1
   when: ( kxlops_mysql_migrate_profile[kxlops_mysql_migrate_active_profile].scheme_and_data_regex | default(false) )
 
 # EXPORT SCHEME AND DATA
@@ -93,8 +88,7 @@
         fact_data_mysqldump_args: " --single-transaction --quick -h {{ kxlops_mysql_migrate_export_host }} -u {{ kxlops_mysql_migrate_export_user }} -p'{{ kxlops_mysql_migrate_export_pass }}' {{ lookup('template', 'ignore-tables.j2') }} {{ kxlops_mysql_migrate_export_db }} {{ fact_profile_export_tables_scheme_and_data | join(' ') }} | gzip >> {{ kxlops_mysql_migrate_export_dir }}/{{ kxlops_mysql_migrate_export_gzip_filename }}"
 
     - name: "DEBUG OUTPUT: fact_data_mysqldump_args"
-      debug: msg={{ fact_data_mysqldump_args }}
-        verbosity: 1
+      debug: msg={{ fact_data_mysqldump_args }} verbosity=1
 
     - name: "Run: mysqldump {{ fact_data_mysqldump_args }}"
       shell: "mysqldump {{ fact_data_mysqldump_args }}"
