--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,7 +9,9 @@
     fact_profile_export_tables_scheme_only: []
     fact_profile_export_tables_scheme_and_data: []
 
-- debug: msg=PROFILE - kxlops_mysqldump_profile {{ kxlops_mysqldump_profile }} verbosity=1
+- debug:
+    msg: "PROFILE - kxlops_mysqldump_profile {{ kxlops_mysqldump_profile }}"
+    verbosity: 1
 
 # BUILD SCHEME ONLY
 - block:
@@ -18,7 +20,9 @@
         fact_profile_export_tables_scheme_only: "{{ fact_profile_export_tables_scheme_only + kxlops_mysqldump_table_groups[item] }}"
       with_items: "{{ kxlops_mysqldump_profile[kxlops_mysqldump_active_profile].scheme_only_groups }}"
 
-    - debug: msg=DEBUG OUTPUT - fact_profile_export_tables_scheme_only{{ fact_profile_export_tables_scheme_only }} verbosity=1
+    - debug:
+        msg: "DEBUG OUTPUT - fact_profile_export_tables_scheme_only{{ fact_profile_export_tables_scheme_only }}"
+        verbosity: 1
 
 - block:
     - name: "Collect tables SCHEME ONLY from REGEX: mysql {{ kxlops_mysqldump_export_db }} -s -N -h {{ kxlops_mysqldump_export_host }} -u {{ kxlops_mysqldump_export_user }} -p{{ kxlops_mysqldump_export_pass }} -e 'SHOW TABLES FROM `{{ kxlops_mysqldump_export_db }}` WHERE `Tables_in_{{ kxlops_mysqldump_export_db }}` REGEXP \"{{ kxlops_mysqldump_profile[kxlops_mysqldump_active_profile].scheme_only_regex }}\"'"
@@ -30,7 +34,9 @@
       set_fact:
         fact_profile_export_tables_scheme_only: "{{ ( fact_profile_export_tables_scheme_only + register_regex_scheme_only_tables.stdout_lines ) | unique }}"
 
-      debug: msg=Final scheme only tables - fact_profile_export_tables_scheme_only {{ fact_profile_export_tables_scheme_only }} verbosity=1
+      debug:
+        msg: "Final scheme only tables - fact_profile_export_tables_scheme_only {{ fact_profile_export_tables_scheme_only }}"
+        verbosity: 1
 
   when: ( kxlops_mysqldump_profile[kxlops_mysqldump_active_profile].scheme_only_regex | default(false) )
 
@@ -58,7 +64,9 @@
       set_fact:
         fact_tables_to_ignore: "{{ register_regex_ignore_tables.stdout_lines + fact_profile_export_tables_scheme_only }}"
 
-      debug: msg=DEBUG OUTPUT - fact_tables_to_ignore {{ fact_tables_to_ignore }} verbosity=1
+      debug:
+        msg: "DEBUG OUTPUT - fact_tables_to_ignore {{ fact_tables_to_ignore }}"
+        verbosity: 1
 
   when: ( kxlops_mysqldump_profile[kxlops_mysqldump_active_profile].excluded_regex | default(false) )
 
@@ -68,7 +76,9 @@
         fact_profile_export_tables_scheme_and_data: "{{ fact_profile_export_tables_scheme_and_data + kxlops_mysqldump_table_groups[item] }}"
       with_items: "{{ kxlops_mysqldump_profile[kxlops_mysqldump_active_profile].scheme_and_data_groups }}"
 
-      debug: msg=DEBUG OUTPUT - fact_profile_export_tables_scheme_and_data {{ fact_profile_export_tables_scheme_and_data }} verbosity=1
+      debug:
+        msg: "DEBUG OUTPUT - fact_profile_export_tables_scheme_and_data {{ fact_profile_export_tables_scheme_and_data }}"
+        verbosity: 1
 
 - block:
     - name: "Collect tables SCHEME AND DATA from REGEX: mysql {{ kxlops_mysqldump_export_db }} -s -N -h {{ kxlops_mysqldump_export_host }} -u {{ kxlops_mysqldump_export_user }} -p{{ kxlops_mysqldump_export_pass }} -e 'SHOW TABLES FROM `{{ kxlops_mysqldump_export_db }}` WHERE `Tables_in_{{ kxlops_mysqldump_export_db }}` REGEXP \"{{ kxlops_mysqldump_profile[kxlops_mysqldump_active_profile].scheme_and_data_regex }}\"'"
@@ -80,7 +90,9 @@
       set_fact:
         fact_profile_export_tables_scheme_and_data: "{{ ( fact_profile_export_tables_scheme_and_data + register_regex_scheme_and_data_tables.stdout_lines ) | unique }}"
 
-      debug: msg=Final scheme and data tables - fact_profile_export_tables_scheme_and_data {{ fact_profile_export_tables_scheme_and_data }} verbosity=1
+      debug:
+        msg: "Final scheme and data tables - fact_profile_export_tables_scheme_and_data {{ fact_profile_export_tables_scheme_and_data }}"
+        verbosity: 1
 
   when: ( kxlops_mysqldump_profile[kxlops_mysqldump_active_profile].scheme_and_data_regex | default(false) )
 
@@ -90,7 +102,9 @@
       set_fact:
         fact_data_mysqldump_args: " --single-transaction --quick -h {{ kxlops_mysqldump_export_host }} -u {{ kxlops_mysqldump_export_user }} -p'{{ kxlops_mysqldump_export_pass }}' {{ lookup('template', 'ignore-tables.j2') }} {{ kxlops_mysqldump_export_db }} {{ fact_profile_export_tables_scheme_and_data | join(' ') }} | gzip >> {{ kxlops_mysqldump_export_dir }}/{{ kxlops_mysqldump_export_gzip_filename }}"
 
-      debug: msg=DEBUG OUTPUT - fact_data_mysqldump_args{{ fact_data_mysqldump_args }} verbosity=1
+      debug:
+        msg: "DEBUG OUTPUT - fact_data_mysqldump_args{{ fact_data_mysqldump_args }}"
+        verbosity: 1
 
     - name: "Run: mysqldump {{ fact_data_mysqldump_args }}"
       shell: "mysqldump {{ fact_data_mysqldump_args }}"
