--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -34,7 +34,7 @@
       set_fact:
         fact_profile_export_tables_scheme_only: "{{ ( fact_profile_export_tables_scheme_only + register_regex_scheme_only_tables.stdout_lines ) | unique }}"
 
-      debug:
+    - debug:
         msg: "Final scheme only tables - fact_profile_export_tables_scheme_only {{ fact_profile_export_tables_scheme_only }}"
         verbosity: 1
 
@@ -64,7 +64,7 @@
       set_fact:
         fact_tables_to_ignore: "{{ register_regex_ignore_tables.stdout_lines + fact_profile_export_tables_scheme_only }}"
 
-      debug:
+    - debug:
         msg: "DEBUG OUTPUT - fact_tables_to_ignore {{ fact_tables_to_ignore }}"
         verbosity: 1
 
@@ -76,7 +76,7 @@
         fact_profile_export_tables_scheme_and_data: "{{ fact_profile_export_tables_scheme_and_data + kxlops_mysqldump_table_groups[item] }}"
       with_items: "{{ kxlops_mysqldump_profile[kxlops_mysqldump_active_profile].scheme_and_data_groups }}"
 
-      debug:
+    - debug:
         msg: "DEBUG OUTPUT - fact_profile_export_tables_scheme_and_data {{ fact_profile_export_tables_scheme_and_data }}"
         verbosity: 1
 
@@ -90,7 +90,7 @@
       set_fact:
         fact_profile_export_tables_scheme_and_data: "{{ ( fact_profile_export_tables_scheme_and_data + register_regex_scheme_and_data_tables.stdout_lines ) | unique }}"
 
-      debug:
+    - debug:
         msg: "Final scheme and data tables - fact_profile_export_tables_scheme_and_data {{ fact_profile_export_tables_scheme_and_data }}"
         verbosity: 1
 
@@ -102,7 +102,7 @@
       set_fact:
         fact_data_mysqldump_args: " --single-transaction --quick -h {{ kxlops_mysqldump_export_host }} -u {{ kxlops_mysqldump_export_user }} -p'{{ kxlops_mysqldump_export_pass }}' {{ lookup('template', 'ignore-tables.j2') }} {{ kxlops_mysqldump_export_db }} {{ fact_profile_export_tables_scheme_and_data | join(' ') }} | gzip >> {{ kxlops_mysqldump_export_dir }}/{{ kxlops_mysqldump_export_gzip_filename }}"
 
-      debug:
+    - debug:
         msg: "DEBUG OUTPUT - fact_data_mysqldump_args{{ fact_data_mysqldump_args }}"
         verbosity: 1
 
